--- a/src/app/main-shedule/day/day.component.css
+++ b/src/app/main-shedule/day/day.component.css
@@ -23,6 +23,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   position: absolute;
   bottom: 3px;
   left: 3px;
