--- a/src/app/main-shedule/day/day.component.scss
+++ b/src/app/main-shedule/day/day.component.scss
@@ -19,6 +19,7 @@
     .day__events-container{
         width: 100%;
         display: flex;
+        flex-wrap: wrap;
         position: absolute;
         bottom:3px;
         left:3px;
