--- a/src/styles.css
+++ b/src/styles.css
@@ -61,11 +61,10 @@
   }
   
   label {
-    font-size: 12px;
-    font-weight: bold;
+    font-size: 15px;
+    font-weight: normal;
     margin-bottom: 4px;
     display: block;
-    text-transform: uppercase;
   }
   
   /* Button */
