--- a/src/app/login/new-user/new-user.component.scss
+++ b/src/app/login/new-user/new-user.component.scss
@@ -30,7 +30,7 @@
             margin-top:auto;
             margin-bottom: auto;
         }
-        .show-pass{
+        .user-login-form__show-pass{
             background-image: url('/assets/eye.png');
             background-size: 20px;
             background-repeat: no-repeat;
